--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AI/ML Engineer Portfolio - Full-Stack Developer specializing in Machine Learning and Cloud Architecture" />
     <meta name="keywords" content="AI, Machine Learning, Full Stack, React, Python, Portfolio" />
-    <title>Your Name - AI/ML Engineer Portfolio</title>
+    <title>Dhruv Lad - AI/ML Engineer Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
